// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AfterTitle/> should not render with eding 1`] = `<div />`;

exports[`<AfterTitle/> should not render without integration 1`] = `<div />`;

exports[`<TitleWrapper/> should not render copy button if editing 1`] = `
<div>
  <div
    class="orderTitleContainer"
  >
    <a
      class="orderTitle"
      href="https://admin.shopify.com/store/undefined/draft_orders/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div>
        foo bar
      </div>
    </a>
  </div>
  <div>
    <div
      class="ui-badge-badge-7025 badge ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    >
      Open
    </div>
  </div>
</div>
`;

exports[`<TitleWrapper/> should render the invoice sent status 1`] = `
<div>
  <div
    class="orderTitleContainer"
  >
    <a
      class="orderTitle"
      href="https://admin.shopify.com/store/undefined/draft_orders/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div>
        foo bar
      </div>
    </a>
    <span
      class="copyButton"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 iconButton wrapper ghost small ui-button-ghost-cef1 ui-button-primary-cef1 ui-button-small-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          <i
            class="material-icons copyIcon icon"
          >
            content_copy
          </i>
        </span>
      </button>
    </span>
  </div>
  <div>
    <div
      class="ui-badge-badge-7025 badge ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    >
      Invoice Sent
    </div>
  </div>
</div>
`;

exports[`<TitleWrapper/> should render the open status 1`] = `
<div>
  <div
    class="orderTitleContainer"
  >
    <a
      class="orderTitle"
      href="https://admin.shopify.com/store/undefined/draft_orders/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div>
        foo bar
      </div>
    </a>
    <span
      class="copyButton"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 iconButton wrapper ghost small ui-button-ghost-cef1 ui-button-primary-cef1 ui-button-small-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          <i
            class="material-icons copyIcon icon"
          >
            content_copy
          </i>
        </span>
      </button>
    </span>
  </div>
  <div>
    <div
      class="ui-badge-badge-7025 badge ui-badge-uppercase-7025"
      style="border-radius: 100px;"
    >
      Open
    </div>
  </div>
</div>
`;
